--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@midudev/tailwind-animations": "^0.2.0",
     "@tailwindcss/vite": "^4.1.12",
+    "flyonui": "^2.4.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwindcss": "^4.1.12"
