--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@iconify-json/tabler": "^1.2.22",
+    "@iconify/tailwind4": "^1.0.6",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
