--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "flyonui": "^2.4.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "sweetalert2": "^11.22.4",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
